--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -11,154 +11,179 @@
 <div class="head">塞班岛</div>
 <div class="cat_bar">点评和特别提醒</div>
 <div class="text">
-<p><strong>邓海军：</strong>普吉岛适合6-10岁小朋友出国旅游，它的海滩景色不是最佳，但交通便利，活动多样，性价比高。<strong>特别提醒：</strong>泰国人找钱时经常少找，在我们5天的行程中发生四次；去外岛浮浅的一日游，很容易晕船。</p>
-<p>推荐4-6天的行程，军舰岛岛强烈推荐！</p>
+<p><strong>邓海军：</strong>塞班岛适合6-10岁会游泳的小朋友，它的海滩人少，海水更清澈，水上活动多样，酒店餐饮选择较少，性价比中。<strong>特别提醒：</strong>晚上还是要注意安全，这是美国不是泰国。</p>
+<p>11月到次年5月是推荐时期，推荐4-6天的行程，军舰岛岛强烈推荐！</p>
 </div>
 <div class="cat_bar">景点</div>
+<div class="mini_bar"><h3>海滩</h3></div>
 <div class="pair">
-<div class="left_wide_text">
-芭东海滩位于普吉岛西海岸中段，全长3公里，属于公共区域，无需门票，24小时向公众开放。天然的海湾屏障使得芭东沙滩平缓，海浪柔和，适合游泳及在沙滩边嬉戏。靠着得天独厚的地理环境，芭东海滩也成为普吉岛开发最早，发展最成熟的海滩之一，这里酒店林立，餐厅、酒吧、小商铺比比皆是，但也正是因为她的繁华，使得芭东略显商业化，沙滩和海水的污染也排在普吉各个海滩之首。
+<div class="right_wide_text">
+麦克海滩位于塞班岛的中心位置，在海面上经常呈现出不可思议的七种颜色变化，沙滩细白而柔软，是塞班最具代表性的海滩。这里无风无浪，海滩周围坐落着许多著名酒店，是悠闲漫步，欣赏夕阳海景的好地方，也是戏水的最佳地点。也临近美国纪念公园。
 </div>
-<div class="right_small_img">
-  <img src="padong.jpeg" alt="Ballade" width="400" height="400">
+<div class="left_small_img">
+  <img src="maco.jpeg" alt="Ballade" width="400" height="400">
   <div class="desc">麦克海滩</div>
 </div>
 </div>
 <div class="pair">
+<div class="left_wide_text">
+<p>查兰海滩是临近卡诺亚酒店，塞班世界酒店和宝瓶座酒店的海滩，上午人很少，下午主要是本地人在玩水上运动，海水较为清澈，近岸水深约一米，有不少水草，鱼不多，</p>
+</div>
+<div class="right_small_img">
+  <img src="chalan.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">查兰海滩</div>
+</div>
+</div>
+<div class="pair">
 <div class="right_wide_text">
-卡伦海滩位于芭东以南，中间隔着一座小山。和芭东海滩比起来，这里有着更绵长开阔的海岸线，海水比芭东更清澈，金黄色的沙滩也很柔软。但这里的海浪较大，海景虽好，但却不是全年都适合游泳，属溺水事件的高发地区，所以卡伦海滩没有沙滩椅和阳伞，也找不到拖曳伞、香蕉船等水上活动，不时有冲浪爱好者在这里冲浪。卡伦有不少星级酒店，与海滩只有一条马路之隔，适合喜欢安静度假的游客。购物餐饮区域和芭东相比没有那么集中，沿着海滩能找到便利店和夜市。卡伦海滩及周边属于公共区域，无需门票，24小时向公众开放。晚上的卡伦远处可以看到闪烁的渔火，海滩寂静而浪漫。
+军舰岛位于塞班岛的西侧，坐船10分钟就可以到达，是塞班旅游的必去景点，也是各种水上运动的集散地。岛周长仅1.5km，只需20到30分钟左右便可环绕岛屿一周。军舰岛的水非常清澈，在此浮潜还能有机会看到大型的沉船，船身周围尽是彩色软珊瑚，色彩缤纷的鱼类穿梭其间，美不胜收。没有条件潜水的游客可以选择水上娱乐项目或者观光潜艇，同样也能饱览美景。军舰岛中心是热带植被和餐饮区，有小吧台可以买饮料，租潜水用品等，非常简单。<strong>门票：25美元</strong><strong>邓海军提示：</strong>这里的人还是比较多的。
 </div>
 <div class="left_small_img">
-  <img src="karon.jpeg" alt="Ballade" width="400" height="400">
+  <img src="maga.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">军舰岛</div>
 </div>
 </div>
 <div class="pair">
 <div class="left_wide_text">
-<p>卡塔海滩同样位于西海岸，位于卡伦海滩南侧，与卡伦相连，从芭东出发乘坐嘟嘟车只需15分钟，费用在450泰铢左右。在三大海滩中，卡塔海滩是最适合游泳的，沙滩虽然不长，但是沙质柔软，海浪也很温柔，海滩两端有礁石，拍出的照片别具风格。很多欧美游客都会慵懒地在海滩的沙滩椅上躺上一整天。整个卡塔区域以欧美游客居多，非常有海边小镇的风格，餐厅为了迎合游客的口味，以西式居多，虽然这里也有酒吧，但是不会像芭东那样喧闹。整体餐饮和购物的价位都要高于芭东和卡伦区域。</p>
+<p>拉德海滩是塞班岛上最南边的海滩了，很少有团客会去，一般是当地地接带去。人数很少，沙滩较小，且布满珊瑚残片，很扎脚。但是不能下水，浪很大，<strong>邓海军提示：</strong>这个景点本身一般，但是临近机场可以拍拍飞机</p>
 </div>
 <div class="right_small_img">
-  <img src="kata.jpeg" alt="Ballade" width="400" height="400">
+  <img src="ladder.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">拉德海滩</div>
+</div>
+</div>
+<div class="pair">
+<div class="right_wide_text">
+坦克海滩位于塞班岛东南侧，因为海浪较大，海滩上空无一人，充满野趣。这里又叫星沙海滩，因为沙子里面有小星星~这些小星星是某种浮游生物角质化而成，只有坦克海滩这种粗粒的沙滩能够找到星沙，细沙滩上的星沙会因为海水的冲刷磨砺而消失棱角，而粗粒间的沙石空隙保护了它，在潮线比较容易找到，但是机场不让带走哦，据说带走罚款，反正我也没找到！<strong>特别提醒：</strong>据说治安较差
+</div>
+<div class="left_small_img">
+  <img src="tank.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">坦克海滩</div>
+</div>
+</div>
+<div class="mini_bar"><h3>其他景点</h3></div>
+<div class="pair">
+<div class="left_wide_text">
+<p>位于塞班到的东北部的一个小岛，很多鸟会在岛上下蛋腐坏，观光台可以俯瞰鸟岛。<strong>邓海军提示：</strong>这个景点本身一般，但是路上风景很漂亮！</p>
+</div>
+<div class="right_small_img">
+  <img src="bird.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">鸟岛</div>
 </div>
 </div>
 <div class="pair">
 <div class="right_wide_text">
-<p><strong>邓海军提示：</strong>小卡塔海滩位于卡塔海滩南侧, 位置最为靠南，海滩也比较小，主要是卡塔萨尼、海岸酒店的客人游览，其他游客相对较少。华人相对较少，俄罗斯人较多</p>
+<p><strong>邓海军提示：</strong>主要是洞穴潜水，不潜勿去，台阶陡峭湿滑，注意安全</p>
 </div>
 <div class="left_small_img">
-  <img src="katanoi.jpg" alt="Ballade" width="400" height="400">
+  <img src="moto.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">蓝洞</div>
 </div>
 </div>
 <div class="pair">
 <div class="left_wide_text">
-<p>卡马拉海滩位于芭东海滩北侧。苏林海滩和卡马拉海滩中间是可以 观日落的辛海角(Sing Cape / ?????????)。古典式酒吧较多，很适 合放松。卡马拉海滩附近就是近几年非常火的普吉幻多奇乐园，游 玩卡马拉海滩后就可以直奔幻多奇乐园。邦涛海滩较长，附近有骑 马俱乐部和高尔夫俱乐部。喜欢骑马的游客们可以选择在邦涛海滩 骑马。</p>
+<p>卡梅尔山天主教大教堂临近卡诺亚酒店，于1945年第二次世界大战之后建立，是塞班岛居民们的精神支柱。保存完好的西班牙风格建筑与塞班岛美丽的自然环境完美融合，到此的游客无不为之赞叹。<strong>邓海军提示：</strong>带孩子听听讲经，看看彩玻璃上的圣经故事</p>
 </div>
 <div class="right_small_img">
-  <img src="kamala.jpeg" alt="Ballade" width="400" height="400">
+  <img src="camel.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">卡梅尔山天主教大教堂</div>
 </div>
 </div>
-<div class="mini_bar">活动</div>
+<div class="pair">
+<div class="right_wide_text">
+<p>
+万岁崖是位于塞班岛最北端的峭壁。1944年美军攻击马里亚纳诸岛上的日军基地，日军退到岛的北端，为了逃避被俘虏的命运而由此跳崖。日本人在万岁崖旁竖立了观音像慰灵塔，而在峭壁的最高处也立了和平纪念碑，每年都会有许多日本人特别到这两个地点祭拜。
+<strong>邓海军提示：</strong>浪涛拍岸，激起千堆雪</p>
+</div>
+<div class="left_small_img">
+  <img src="wansui.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">万岁崖</div>
+</div>
+</div>
 <div class="pair">
 <div class="left_wide_text">
-<p>
-幻多奇乐园是一个占地140 公顷，斥资35 亿泰铢建成的梦幻城堡，1988 年底正式开幕，蕴含异国风情的文化娱乐主题公园，被誉为泰国本土的迪斯尼。在这里不仅可以观赏到泰国传统文化与高科技相结合的大型表演秀，还可以在主题公园内尽情游玩、品尝美食、购买特色纪念品，其独特的风格和创意，都将给人留下深刻而美好的回忆。幻多奇大型歌舞表演秀“梦幻王国剧场”于晚上9 点正式拉开帷幕，为你呈现了一台极具泰国特色的拉斯维加斯式极致表演。特别是当超过20头大象同时登台亮相，展现各种训练有素的技艺时，不同国籍、年龄的游客都为之震撼并由衷地兴奋。
-幻多奇乐园是普是以拉斯维加斯式的歌舞表演、嘉年华村和巨型自助餐厅为卖点。
-在幻多奇乐园的嘉年华村有各种造型夸张的建筑，沿路有穿着民族服饰的小丑进行街头表演。
-幻多奇乐园的歌舞表演是在金碧辉煌的象宫殿剧院进行，内容包括泰国传统神话、马戏、魔术等，配合灯光、音响、烟火效果，令人目不暇给。
-幻多奇乐园的自助餐厅建于人工湖上，可以容纳4000人，到处金光闪闪，豪华程度有如皇宫，即使只在里面参观也是一次难忘的经历。
-<strong>门票：</strong>
-表演加自助晚餐票价为成人1900泰铢；4-12岁儿童1700泰铢。表演票价1500泰铢。自助餐票价为成人800泰铢；4-12岁儿童600泰铢。四岁以下儿童免费，但不单独提供座位。剧场内中央地带“金席”座位加价250泰铢。</p>
+<p>日军最后司令部的遗址位于塞班岛北端，有二战时遗留下的坦克、大炮等战争遗留物和自然石灰岩所形成的战争要塞。这里原来是原子弹的地下储藏库，在第二次世界大战的时候投放到日本广岛和长崎的原子弹B29就是从这里装载的。现在遗址已是个处处绿意的小公园，但仍可看到壁岩上的碉堡以及战车遗迹，是历史爱好者的必游之地。<strong>邓海军点评：</strong>十分钟就可以结束的景点</p>
 </div>
 <div class="right_small_img">
-  <img src="fatasy.jpeg" alt="Ballade" width="400" height="400">
-  <div class="desc">幻多奇乐园</div>
+  <img src="japan.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">日军司令部</div>
 </div>
 </div>
 <div class="pair">
 <div class="right_wide_text">
-<p>查龙寺位于普吉的查龙地区(Chalong)，又被称为越差庙，这里是普吉最岛古老而驰名的寺院，有超过100年的历史。寺院内采用了泰国传统的建筑风格，可供游览的主要有主大殿、舍利塔、寺庙原址和老祖师庙这四个殿。 主大殿在最靠近入门口的地方，外部装饰最炫目，供奉着三位高僧的铜像，供信徒烧香、献花、贴金、参拜、求签。 舍利塔是最高的建筑，一共分为三层。第一层供奉着七尊佛像，姿态各不相同，分别供周一至周日出生的人，根据自己的出生日来参拜；第二层供奉着汉白玉的佛像，第三层也就是顶层，供奉着由斯里兰卡赠送给泰国的佛教圣物：佛祖舍利，虽然只有米粒般大小，但是在合适的角度还是肉眼可见的。<strong>门票：无</strong></p>
+<p>塔帕丘山海拔为473米，是塞班岛最高的地方，从这里可以360度俯瞰塞班岛以及巨大耶稣像。由于旁边就是世界上最深的马里亚纳海沟，所以从某种意义来说，这里可以说是“世界第一高峰”。<strong>邓海军点评：</strong>主要是开到山顶眺望一下各种的蓝，路很烂，RAV4开上去有点困难，可以只开到半山腰</p>
 </div>
 <div class="left_small_img">
-  <img src="watchalong.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">查龙寺</div>
+  <img src="high.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">最高峰</div>
 </div>
 </div>
 <div class="pair">
 <div class="left_wide_text">
-<p>西蒙娱乐集团人妖秀位于芭东海滩附近，是普吉岛最早、最著名的人妖秀，表演剧场能容纳几百人。巨大的舞台，高科技的声光设备，将整个表演带入一个神奇多彩的世界。欣赏人妖秀也是游览普吉岛的一个重要节目。 剧院内经常座无虚席，所以需要提前预订。一般在普集镇或者芭东海滩附近都可以买到票，人妖秀的官网也提供预订。<strong>邓海军点评：</strong>看一帮人不停的换衣服然后不停的假唱，当然老少咸宜的节目肯定是免黄的呵呵，就是看个热闹，不要期望太高哦</p>
+<p>美军纪念公园(American Memorial Park)位于凯悦饭店附近，为了荣耀二次大战马里亚纳战役中的五千名牺牲者，并将牺牲者的名字刻在纪念碑上供人瞻仰，公园内24小时都悬挂着美国的军旗，包括美国陆海空军的旗帜。公园占地133公顷，园内绿草如茵，园内设施有码头、篮球场、运动场、野餐区、烤肉区及一个游泳池，有网球场、沙滩野餐地区、1.5公里长的沿海慢跑道。公园中还有一个纪念二次世界大战的博物馆，收集了军队的武器、军服、以及一些纪录性的相片，还有有一个小电影院，轮流放映各种语言的塞班岛二战记录片。<strong>邓海军提示：</strong>可以逛一逛，再看看电影和展览。</p>
 </div>
 <div class="right_small_img">
-  <img src="simon.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">西蒙人妖秀</div>
+  <img src="memo.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">美国纪念公园</div>
 </div>
 </div>
 <div class="cat_bar"><h2>酒店</h2></div>
-<div class="mini_bar"><h3>卡塔萨尼酒店</h3></div>
+<div class="mini_bar"><h3>凯悦酒店</h3></div>
 <div class="pair">
 <div class="left_wide_text">
-<p>Katathani Phuket度假酒店，享受宁静休闲的海滩假日，并尊享6个游泳池和6个餐饮场所。酒店位于卡塔海滩沿岸，设有一流的SPA中心和网球场。Katathani酒店宽敞的客房设有俯瞰园景的私人阳台，配有泰国风格的家具和木地板。每间客房均配备了有线电视和玻璃墙浴室。客人可以在酒店的两个健身中心挥汗，然后到Tew Son SPA中心享受舒适的按摩和理疗。其他休闲选择包括水上运动设施、游戏室和图书馆。Katathani Phuket酒店的6个餐饮场所供应国际美食，包括轻松的海滩烧烤和精美的佳肴。酒店还提供24小时客房服务，并举办烹饪课程。Katathani Beach度假酒店距离普吉岛国际机场有1小时车程，距离娱乐场所仅有15分钟步行路程。酒店提供前往普吉镇和巴东海滩的班车服务。<strong>邓海军点评：</strong>真的算不上5星，也就是4星级别，但是有自己的海滩，人也相对较少，有自己的Kid Club，缺点是位置太偏，离别的地方都远，不适合喜欢热闹的人</p>
+<p>塞班岛凯悦酒店坐落于传奇的麦可海滩 (Micro Beach)，环抱 14 英亩的热带花园和礁湖，于北马里亚纳群岛独辟一片豪华的宁静。 酒店距水上运动场所、高尔夫球场、钓鱼场所和 Elan俱乐部健身中心仅几步之遥，前往主要的购物中心只需步行 5 分钟，距商业区和机场也只需短暂车程。豪华的酒店大堂设有前台工作人员、观光服务台和汽车租赁柜台。 酒店通过 1,300 多平方米的室外功能空间提供了别具一格的活动设施，包括景观花园、池畔和海滩区域。 室内贵宾厅则配有无线因特网接入，非常方便旅客使用。Elan 俱乐部健身中心是一处极尽放松的场所，设有器械齐全的健身房、室外泳池和冷池、漩涡水疗池、桑拿房、网球场等。 价格：1300-2000，类似的还有塞班世界酒店（在南端）</p>
 </div>
 <div class="right_small_img">
-  <img src="katathani.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">卡塔萨尼酒店</div>
+  <img src="hyatt.png" alt="Ballade" width="400" height="400">
+  <div class="desc">凯悦酒店</div>
 </div>
 </div>
 
-<div class="mini_bar">皮皮岛假日酒店</div>
+<div class="mini_bar">卡诺亚度假村</div>
 <div class="pair">
 <div class="left_small_img">
-  <img src="holiday_inn_phiphi.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">皮皮岛假日酒店</div>
+  <img src="kaona.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">卡诺亚度假村</div>
 </div>
 <div class="right_wide_text">
-<p>Holiday Inn Resort Phi Phi Island度假酒店坐落在安达曼海边的一个白色沙滩上，设有两个景观池、一间健身房和Scuba Schools International Dive Center潜水学校/国际潜水中心。
-您可以在大型私人阳台的躺椅上沐浴阳光，欢度午后时光。Holiday Inn Resort Phi Phi Island度假酒店的客房配有舒适典雅的木质家具和平面电视。
-客人可以享受按摩服务，或尝试潜水和垂钓等水上活动。旅游咨询台可以为您安排周围岛屿的游览活动，客人还可以在精品店购买纪念品。酒店还设有一个儿童俱乐部。
-Cha Bah餐厅提供温馨的海滨用餐体验，供应新鲜的海鲜烧烤料理。Tai Rom Prao餐厅提供国际自助餐和泰国文化表演。Holiday Inn Resort Phi Phi Island度假酒店可以安排从甲米的Klong Jilard码头和普吉岛的Rassada码头出发的酒店快艇接送服务。<strong>邓海军点评：</strong>非常棒的酒店，海景房和园林房都很棒，山顶的小餐厅可以看美丽的夕阳，唯一的缺点就是蚊子太多！</p>
+<p>塞班卡诺亚度假村坐落于塞班岛最佳的沙滩上。酒店距离塞班国际机场有大约10分钟的车程，酒店周边还有高尔夫俱乐部。客人可以在游泳池休闲，或尝试沙滩排球、浮潜、潜水和喷气滑水，然后在海滨酒吧欣赏日落景色。酒店位于查兰卡诺亚地区，距离塞班岛国际机场仅有10分钟车程，提供额外收费的机场班车服务。Coral Ocean Point高尔夫俱乐部距离酒店仅有6公里。酒店的部分房间享有美不胜收的海景。 Aoi日本餐厅提供全天自助餐和单点菜肴。Barefoot Beach Bar & BBQ酒吧在晚上营业，水下主题酒吧Nami Lounge拥有带鲨鱼的水族馆。<strong>邓海军点评：</strong>典型四星，价格适中，约600-700，主流选择。缺点：不在市中心，需要搭乘DFS班车！类似的还有塞班岛悅泰酒店（悅泰酒店在市中心）</p>
 </div>
 </div>
-<div class="mini_bar">普吉岛威斯汀西莱湾Spa度假酒店</div>
+<div class="mini_bar">水瓶座海滩塔酒店</div>
 <div class="pair">
 <div class="left_wide_text">
 <p>
-威斯汀酒店位于一条宁静的海岸线旁，提供多种健身设施和3个无边泳池，并享有迷人的海景。酒店设有一个spa中心和提供24小时服务的礼宾台。现代化的客房享有大海全景，设有户外座位，并通过滑动玻璃门通往一个私人阳台。客房提供一台37英寸平面电视、iPod基座和DVD播放机。The Westin Siray Bay Resort & Spa Phuket酒店提供免费停车场，距离普吉镇有15分钟的车程。酒店距离普吉国际机场和Phuket FantaSea Show主题公园约有40分钟的车程。客人可以在海滩边享受瑜伽或者打排球。其他设施包括一个儿童俱乐部、免费的非机动水上运动以及公共区域的免费无线网络连接。Prego by the Beach餐厅提供现代意大利美食和舒缓的酒吧音乐，而EEST and Seasonal Taste餐厅提供丰盛的亚洲美食。Daily Treats西饼屋供应新鲜的糕点、蛋糕和咖啡。<strong>邓海军点评：</strong>真正的五星酒店，拥有私家海滩，每个房间都面朝大海，有很棒的无边泳池，就是位置太偏了，晚饭只好在酒店吃，贵且不好吃，海滩比较小，海水也一般！</p>
+位于塞班岛市管辖范围内、交通方便，水瓶座海滩塔酒店 已成为当地旅游的最佳落脚点。 这家酒店离市中心仅隔4.6 km，方便游客出行。 对于喜欢冒险的游客来说，奥莱体育馆, 塞班岛乡村俱乐部	, 珊瑚海高尔夫球场再合适不过了。在水瓶座海滩塔酒店,一切都是为了营造宾至如归的氛围。为此，水瓶座海滩塔酒店提供最优质的服务和最优良的设施。 酒店的特色服务有所有房间设有免费无线网络, 24小时前台, 无障碍设施, 无线网络(公共区域), 停车场。走进63间舒适客房之一，好好享受如部分客房提供的无线上网(免费), 禁烟房, 空调, 阳台/露台, 书桌等设施，将一天的烦恼与压力抛之脑后。 除此之外，酒店各种娱乐设施一定会让您在留宿期间享受更多乐趣。 不管您是哪一种类型的游客，水瓶座海滩塔酒店都是来塞班岛的理想下榻酒店。<strong>邓海军点评：</strong>公寓酒店，价格便宜600-700/天，这可是两个房间，也就是两家的价格，不过房间条件很一般。一定要海景房</p>
 </div>
 <div class="right_small_img">
-  <img src="westin.jpg" alt="Ballade" width="400" height="400">
-  <div class="desc">普吉岛威斯汀西莱湾Spa度假酒店</div>
+  <img src="aqua.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">水瓶座海滩塔酒店</div>
 </div>
 </div>
 <div class="cat_bar"><h2>交通、签证、餐饮及其它</h2></div>
 <div class="mini_bar"><h3>航班</h3></div>
 <div class="text">
-<p>北京飞普吉的直飞航班需要6个小时，值飞公司为国航和海航，均为红眼航班，转场航班需要8-12个小时，10-12小时的居多，抵达时间可以更加理想。</p>
+<p>北京飞塞班的直飞航班需要5个小时，值飞公司为东航，均为红眼航班，首尔中转的韩亚航班需要8-个小时，都是午夜到。</p>
 </div>
 <div class="mini_bar"><h3>接送机</h3></div>
 <div class="text">
 <p>推荐通过淘宝或携程订购</p>
 </div>
-<div class="mini_bar"><h3>离岛班轮</h3></div>
-<div class="text">
-<p>推荐通过淘宝或携程订购，同时会包括接送车辆，到皮皮岛约2-3小时，偶尔索要行李小费！</p>
-</div>
 <div class="mini_bar"><h3>岛内交通</h3></div>
 <div class="text">
-<p>短途直接tutu车，或双条车；长途推荐旅游社包车</p>
+<p>景点请租车或包车，往返市中心蹭DFS班车</p>
 </div>
-<div class="mini_bar"><h3>签证</h3></div>
+<div class="mini_bar"><h3>免签证</h3></div>
 <div class="text">
-<p>普吉岛是需要泰国签证的，落地签也有一定要求，所以推荐国内办好签证，再出发。出签一般是3-4个工作日，很快，没听说过拒签的。在飞机上请积极主动的往空姐要入境单（多要几张，因为会填错），找个网上的模板填好，入境时能节省大量时间。泰国入境的办事效率典型的第三世界！</p>
+<p>免签证，但是需要填入境表和海关物品申报表，在飞机上会发，网上可以找到模板，入境大概需要1小时</p>
 </div>
 <div class="mini_bar"><h3>饮食</h3></div>
 <div class="text">
-<p>以西餐和泰餐为主，较为卫生，没有发现腹泻和呕吐现象</p>
+<p>以西餐为主，推荐Country House，还有一些中餐、韩餐、日餐和越南菜，集中在市中心，较为卫生，没有发现腹泻和呕吐现象</p>
 </div>
 <div class="mini_bar"><h3>总成本和典型的消费价格</h3></div>
 <div class="text">
-<p>淡季不算购物应该5-7千元/人/5天，旺季一般7-9千/人/五天。吃饭、饮料和水果和国内持平。</p>
+<p>淡季不算购物应该6-8千元/人/4天，旺季一般7-9千/人/4天。吃饭、饮料和水果比国内贵。免税店一点也不便宜。</p>
 </div>
 </body>
 </html>
