--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -36,7 +36,7 @@
 </div>
 <div class="pair">
 <div class="right_wide_text">
-军舰岛位于塞班岛的西侧，坐船10分钟就可以到达，是塞班旅游的必去景点，也是各种水上运动的集散地。岛周长仅1.5km，只需20到30分钟左右便可环绕岛屿一周。军舰岛的水非常清澈，在此浮潜还能有机会看到大型的沉船，船身周围尽是彩色软珊瑚，色彩缤纷的鱼类穿梭其间，美不胜收。没有条件潜水的游客可以选择水上娱乐项目或者观光潜艇，同样也能饱览美景。军舰岛中心是热带植被和餐饮区，有小吧台可以买饮料，租潜水用品等，非常简单。<strong>门票：25美元</strong><strong>邓海军提示：</strong>这里的人还是比较多的。
+军舰岛位于塞班岛的西侧，坐船10分钟就可以到达，是塞班旅游的必去景点，也是各种水上运动的集散地。岛周长仅1.5km，只需20到30分钟左右便可环绕岛屿一周。军舰岛的水非常清澈，在此浮潜还能有机会看到大型的沉船，船身周围尽是彩色软珊瑚，色彩缤纷的鱼类穿梭其间，美不胜收。没有条件潜水的游客可以选择水上娱乐项目或者观光潜艇，同样也能饱览美景。军舰岛中心是热带植被和餐饮区，有小吧台可以买饮料，租潜水用品等，非常简单。<strong>门票：25美元。</strong><strong>邓海军提示：</strong>这里的人还是比较多的。
 </div>
 <div class="left_small_img">
   <img src="maga.jpg" alt="Ballade" width="400" height="400">
