--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -156,7 +156,7 @@
 位于塞班岛市管辖范围内、交通方便，水瓶座海滩塔酒店 已成为当地旅游的最佳落脚点。 这家酒店离市中心仅隔4.6 km，方便游客出行。 对于喜欢冒险的游客来说，奥莱体育馆, 塞班岛乡村俱乐部	, 珊瑚海高尔夫球场再合适不过了。在水瓶座海滩塔酒店,一切都是为了营造宾至如归的氛围。为此，水瓶座海滩塔酒店提供最优质的服务和最优良的设施。 酒店的特色服务有所有房间设有免费无线网络, 24小时前台, 无障碍设施, 无线网络(公共区域), 停车场。走进63间舒适客房之一，好好享受如部分客房提供的无线上网(免费), 禁烟房, 空调, 阳台/露台, 书桌等设施，将一天的烦恼与压力抛之脑后。 除此之外，酒店各种娱乐设施一定会让您在留宿期间享受更多乐趣。 不管您是哪一种类型的游客，水瓶座海滩塔酒店都是来塞班岛的理想下榻酒店。<strong>邓海军点评：</strong>公寓酒店，价格便宜600-700/天，这可是两个房间，也就是两家的价格，不过房间条件很一般。一定要海景房</p>
 </div>
 <div class="right_small_img">
-  <img src="aqua.jpg" alt="Ballade" width="400" height="400">
+  <img src="maga.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">水瓶座海滩塔酒店</div>
 </div>
 </div>
