--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -30,7 +30,7 @@
 <p>查兰海滩是临近卡诺亚酒店，塞班世界酒店和宝瓶座酒店的海滩，上午人很少，下午主要是本地人在玩水上运动，海水较为清澈，近岸水深约一米，有不少水草，鱼不多，</p>
 </div>
 <div class="right_small_img">
-  <img src="chalan.jpg" alt="Ballade" width="400" height="400">
+  <img src="aqua.jpg" alt="Ballade" width="400" height="400">
   <div class="desc">查兰海滩</div>
 </div>
 </div>
