--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -21,7 +21,7 @@
 麦克海滩位于塞班岛的中心位置，在海面上经常呈现出不可思议的七种颜色变化，沙滩细白而柔软，是塞班最具代表性的海滩。这里无风无浪，海滩周围坐落着许多著名酒店，是悠闲漫步，欣赏夕阳海景的好地方，也是戏水的最佳地点。也临近美国纪念公园。
 </div>
 <div class="left_small_img">
-  <img src="maco.jpeg" alt="Ballade" width="400" height="400">
+  <img src="maco.jpeg" alt="Wait to load image" width="400" height="400">
   <div class="desc">麦克海滩</div>
 </div>
 </div>
@@ -30,7 +30,7 @@
 <p>查兰海滩是临近卡诺亚酒店，塞班世界酒店和宝瓶座酒店的海滩，上午人很少，下午主要是本地人在玩水上运动，海水较为清澈，近岸水深约一米，有不少水草，鱼不多，</p>
 </div>
 <div class="right_small_img">
-  <img src="chalan.jpg" alt="Ballade" width="400" height="400">
+  <img src="chalan.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">查兰海滩</div>
 </div>
 </div>
@@ -39,7 +39,7 @@
 军舰岛位于塞班岛的西侧，坐船10分钟就可以到达，是塞班旅游的必去景点，也是各种水上运动的集散地。岛周长仅1.5km，只需20到30分钟左右便可环绕岛屿一周。军舰岛的水非常清澈，在此浮潜还能有机会看到大型的沉船，船身周围尽是彩色软珊瑚，色彩缤纷的鱼类穿梭其间，美不胜收。没有条件潜水的游客可以选择水上娱乐项目或者观光潜艇，同样也能饱览美景。军舰岛中心是热带植被和餐饮区，有小吧台可以买饮料，租潜水用品等，非常简单。<strong>门票：25美元。</strong><strong>邓海军提示：</strong>这里的人还是比较多的。
 </div>
 <div class="left_small_img">
-  <img src="maga.jpg" alt="Ballade" width="400" height="400">
+  <img src="maga.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">军舰岛</div>
 </div>
 </div>
@@ -48,7 +48,7 @@
 <p>拉德海滩是塞班岛上最南边的海滩了，很少有团客会去，一般是当地地接带去。人数很少，沙滩较小，且布满珊瑚残片，很扎脚。但是不能下水，浪很大，<strong>邓海军提示：</strong>这个景点本身一般，但是临近机场可以拍拍飞机</p>
 </div>
 <div class="right_small_img">
-  <img src="ladder.jpg" alt="Ballade" width="400" height="400">
+  <img src="ladder.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">拉德海滩</div>
 </div>
 </div>
@@ -57,7 +57,7 @@
 坦克海滩位于塞班岛东南侧，因为海浪较大，海滩上空无一人，充满野趣。这里又叫星沙海滩，因为沙子里面有小星星~这些小星星是某种浮游生物角质化而成，只有坦克海滩这种粗粒的沙滩能够找到星沙，细沙滩上的星沙会因为海水的冲刷磨砺而消失棱角，而粗粒间的沙石空隙保护了它，在潮线比较容易找到，但是机场不让带走哦，据说带走罚款，反正我也没找到！<strong>特别提醒：</strong>据说治安较差
 </div>
 <div class="left_small_img">
-  <img src="tank.jpg" alt="Ballade" width="400" height="400">
+  <img src="tank.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">坦克海滩</div>
 </div>
 </div>
@@ -67,7 +67,7 @@
 <p>位于塞班到的东北部的一个小岛，很多鸟会在岛上下蛋腐坏，观光台可以俯瞰鸟岛。<strong>邓海军提示：</strong>这个景点本身一般，但是路上风景很漂亮！</p>
 </div>
 <div class="right_small_img">
-  <img src="bird.jpg" alt="Ballade" width="400" height="400">
+  <img src="bird.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">鸟岛</div>
 </div>
 </div>
@@ -76,7 +76,7 @@
 <p><strong>邓海军提示：</strong>主要是洞穴潜水，不潜勿去，台阶陡峭湿滑，注意安全</p>
 </div>
 <div class="left_small_img">
-  <img src="moto.jpg" alt="Ballade" width="400" height="400">
+  <img src="moto.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">蓝洞</div>
 </div>
 </div>
@@ -85,7 +85,7 @@
 <p>卡梅尔山天主教大教堂临近卡诺亚酒店，于1945年第二次世界大战之后建立，是塞班岛居民们的精神支柱。保存完好的西班牙风格建筑与塞班岛美丽的自然环境完美融合，到此的游客无不为之赞叹。<strong>邓海军提示：</strong>带孩子听听讲经，看看彩玻璃上的圣经故事</p>
 </div>
 <div class="right_small_img">
-  <img src="camel.jpg" alt="Ballade" width="400" height="400">
+  <img src="camel.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">卡梅尔山天主教大教堂</div>
 </div>
 </div>
@@ -96,7 +96,7 @@
 <strong>邓海军提示：</strong>浪涛拍岸，激起千堆雪</p>
 </div>
 <div class="left_small_img">
-  <img src="wansui.jpg" alt="Ballade" width="400" height="400">
+  <img src="wansui.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">万岁崖</div>
 </div>
 </div>
@@ -105,7 +105,7 @@
 <p>日军最后司令部的遗址位于塞班岛北端，有二战时遗留下的坦克、大炮等战争遗留物和自然石灰岩所形成的战争要塞。这里原来是原子弹的地下储藏库，在第二次世界大战的时候投放到日本广岛和长崎的原子弹B29就是从这里装载的。现在遗址已是个处处绿意的小公园，但仍可看到壁岩上的碉堡以及战车遗迹，是历史爱好者的必游之地。<strong>邓海军点评：</strong>十分钟就可以结束的景点</p>
 </div>
 <div class="right_small_img">
-  <img src="japan.jpg" alt="Ballade" width="400" height="400">
+  <img src="japan.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">日军司令部</div>
 </div>
 </div>
@@ -114,7 +114,7 @@
 <p>塔帕丘山海拔为473米，是塞班岛最高的地方，从这里可以360度俯瞰塞班岛以及巨大耶稣像。由于旁边就是世界上最深的马里亚纳海沟，所以从某种意义来说，这里可以说是“世界第一高峰”。<strong>邓海军点评：</strong>主要是开到山顶眺望一下各种的蓝，路很烂，RAV4开上去有点困难，可以只开到半山腰</p>
 </div>
 <div class="left_small_img">
-  <img src="high.jpg" alt="Ballade" width="400" height="400">
+  <img src="high.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">最高峰</div>
 </div>
 </div>
@@ -123,7 +123,7 @@
 <p>美军纪念公园(American Memorial Park)位于凯悦饭店附近，为了荣耀二次大战马里亚纳战役中的五千名牺牲者，并将牺牲者的名字刻在纪念碑上供人瞻仰，公园内24小时都悬挂着美国的军旗，包括美国陆海空军的旗帜。公园占地133公顷，园内绿草如茵，园内设施有码头、篮球场、运动场、野餐区、烤肉区及一个游泳池，有网球场、沙滩野餐地区、1.5公里长的沿海慢跑道。公园中还有一个纪念二次世界大战的博物馆，收集了军队的武器、军服、以及一些纪录性的相片，还有有一个小电影院，轮流放映各种语言的塞班岛二战记录片。<strong>邓海军提示：</strong>可以逛一逛，再看看电影和展览。</p>
 </div>
 <div class="right_small_img">
-  <img src="memo.jpg" alt="Ballade" width="400" height="400">
+  <img src="memo.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">美国纪念公园</div>
 </div>
 </div>
@@ -134,7 +134,7 @@
 <p>塞班岛凯悦酒店坐落于传奇的麦可海滩 (Micro Beach)，环抱 14 英亩的热带花园和礁湖，于北马里亚纳群岛独辟一片豪华的宁静。 酒店距水上运动场所、高尔夫球场、钓鱼场所和 Elan俱乐部健身中心仅几步之遥，前往主要的购物中心只需步行 5 分钟，距商业区和机场也只需短暂车程。豪华的酒店大堂设有前台工作人员、观光服务台和汽车租赁柜台。 酒店通过 1,300 多平方米的室外功能空间提供了别具一格的活动设施，包括景观花园、池畔和海滩区域。 室内贵宾厅则配有无线因特网接入，非常方便旅客使用。Elan 俱乐部健身中心是一处极尽放松的场所，设有器械齐全的健身房、室外泳池和冷池、漩涡水疗池、桑拿房、网球场等。 价格：1300-2000，类似的还有塞班世界酒店（在南端）</p>
 </div>
 <div class="right_small_img">
-  <img src="hyatt.png" alt="Ballade" width="400" height="400">
+  <img src="hyatt.png" alt="Wait to load image" width="400" height="400">
   <div class="desc">凯悦酒店</div>
 </div>
 </div>
@@ -142,7 +142,7 @@
 <div class="mini_bar">卡诺亚度假村</div>
 <div class="pair">
 <div class="left_small_img">
-  <img src="kaona.jpg" alt="Ballade" width="400" height="400">
+  <img src="kaona.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">卡诺亚度假村</div>
 </div>
 <div class="right_wide_text">
@@ -156,7 +156,7 @@
 位于塞班岛市管辖范围内、交通方便，水瓶座海滩塔酒店 已成为当地旅游的最佳落脚点。 这家酒店离市中心仅隔4.6 km，方便游客出行。 对于喜欢冒险的游客来说，奥莱体育馆, 塞班岛乡村俱乐部	, 珊瑚海高尔夫球场再合适不过了。在水瓶座海滩塔酒店,一切都是为了营造宾至如归的氛围。为此，水瓶座海滩塔酒店提供最优质的服务和最优良的设施。 酒店的特色服务有所有房间设有免费无线网络, 24小时前台, 无障碍设施, 无线网络(公共区域), 停车场。走进63间舒适客房之一，好好享受如部分客房提供的无线上网(免费), 禁烟房, 空调, 阳台/露台, 书桌等设施，将一天的烦恼与压力抛之脑后。 除此之外，酒店各种娱乐设施一定会让您在留宿期间享受更多乐趣。 不管您是哪一种类型的游客，水瓶座海滩塔酒店都是来塞班岛的理想下榻酒店。<strong>邓海军点评：</strong>公寓酒店，价格便宜600-700/天，这可是两个房间，也就是两家的价格，不过房间条件很一般。一定要海景房</p>
 </div>
 <div class="right_small_img">
-  <img src="maga.jpg" alt="Ballade" width="400" height="400">
+  <img src="aqua.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">水瓶座海滩塔酒店</div>
 </div>
 </div>
