--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -134,7 +134,7 @@
 <p>塞班岛凯悦酒店坐落于传奇的麦可海滩 (Micro Beach)，环抱 14 英亩的热带花园和礁湖，于北马里亚纳群岛独辟一片豪华的宁静。 酒店距水上运动场所、高尔夫球场、钓鱼场所和 Elan俱乐部健身中心仅几步之遥，前往主要的购物中心只需步行 5 分钟，距商业区和机场也只需短暂车程。豪华的酒店大堂设有前台工作人员、观光服务台和汽车租赁柜台。 酒店通过 1,300 多平方米的室外功能空间提供了别具一格的活动设施，包括景观花园、池畔和海滩区域。 室内贵宾厅则配有无线因特网接入，非常方便旅客使用。Elan 俱乐部健身中心是一处极尽放松的场所，设有器械齐全的健身房、室外泳池和冷池、漩涡水疗池、桑拿房、网球场等。 价格：1300-2000，类似的还有塞班世界酒店（在南端）</p>
 </div>
 <div class="right_small_img">
-  <img src="hyatt.png" alt="Wait to load image" width="400" height="400">
+  <img src="hyatt.jpg" alt="Wait to load image" width="400" height="400">
   <div class="desc">凯悦酒店</div>
 </div>
 </div>
