--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -17,7 +17,7 @@
 <tr><td><a href="jeju.html">济州岛</a></td><td></td><td>7hrs</td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td>邮轮</td></tr>
 <tr><td><a href="okinawa.html">冲绳</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
 <tr><td><a href="phuket/phuket.html">普吉岛</a></td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>寺庙，表演，潜水，攀牙湾</td><td>皮皮岛</td><td>巴厘岛,塞班岛</td><td>邓海军，田锐</td><td>Y</td><td></td></tr>
-<tr><td><a href="saipan/saipan.html">塞班岛</a></td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>潜水，水上运动</td><td></td><td>Phuket,Bali</td><td>邓海军</td><td>N</td><td></td></tr>
+<tr><td><a href="a1/saipan.html">塞班岛</a></td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>潜水，水上运动</td><td></td><td>Phuket,Bali</td><td>邓海军</td><td>N</td><td></td></tr>
 <tr><td><a href="bali.html">巴厘岛</a></td><td></td><td></td><td></td><td></td><td></td><td>Phuket,Saipan</td><td>郝又超，王爱华，汪超</td><td>N</td><td></td></tr>
 <tr><td><a href="singapore.html">新加坡</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>邓海军</td><td>N</td><td></td></tr>
 <tr><td><a href="pulaubintan.html">巴丹岛</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>李红君</td><td>N</td><td></td></tr>
