--- a/hobbies/travels/overseas/islands/a1/saipan.html
+++ b/hobbies/travels/overseas/islands/a1/saipan.html
@@ -12,7 +12,7 @@
 <div class="cat_bar">点评和特别提醒</div>
 <div class="text">
 <p><strong>邓海军：</strong>塞班岛适合6-10岁会游泳的小朋友，它的海滩人少，海水更清澈，水上活动多样，酒店餐饮选择较少，性价比中。<strong>特别提醒：</strong>晚上还是要注意安全，这是美国不是泰国。</p>
-<p>11月到次年5月是推荐时期，推荐4-6天的行程，军舰岛岛强烈推荐！</p>
+<p>11月到次年5月是推荐时期（尤其是五月，路两侧的凤凰花都开了），推荐4-6天的行程，军舰岛岛强烈推荐！单母亲带孩子去塞班游玩，值机空姐会提示可能拒签（免费落地签），但实际上很少。</p>
 </div>
 <div class="cat_bar">景点</div>
 <div class="mini_bar"><h3>海滩</h3></div>
