--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -21,7 +21,7 @@
 <tr><td><a href="bali.html">巴厘岛</a></td><td></td><td></td><td></td><td></td><td></td><td>Phuket,Saipan</td><td>郝又超，王爱华，汪超</td><td>N</td><td></td></tr>
 <tr><td><a href="singapore.html">新加坡</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>贺敏，邓海军，李红君</td><td>N</td><td></td></tr>
 <tr><td><a href="pulaubintan.html">巴丹岛</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>贺敏，李红君</td><td>N</td><td></td></tr>
-<tr><td><a href="maledives/maledives.html">马尔代夫</a></td><td>45/4</td><td>11hrs (Male)</td><td>全年</td><td>潜水、钓鱼、海洋动物</td><td></td><td>帕劳</td><td>邓海军，谈猛刚，王盈</td><td>N</td><td></td></tr>
+<tr><td><a href="maledive/maledive.html">马尔代夫</a></td><td>45/4</td><td>11hrs (Male)</td><td>全年</td><td>潜水、钓鱼、海洋动物</td><td></td><td>帕劳</td><td>邓海军，谈猛刚，王盈</td><td>N</td><td></td></tr>
 <tr><td><a href="palau.html">帕劳</a></td><td></td><td></td><td></td><td>潜水</td><td></td><td>马尔代夫</td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="sabah.html">沙巴</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>温胤欣</td><td>Y</td><td>Safety</td></tr>
 <tr><td><a href="boracay.html">长滩</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
