--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -25,7 +25,7 @@
 <tr><td><a href="palau.html">帕劳</a></td><td></td><td></td><td></td><td>潜水</td><td></td><td>马尔代夫</td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="sabah.html">沙巴</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>温胤欣</td><td>Y</td><td>Safety</td></tr>
 <tr><td><a href="boracay.html">长滩</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
-<tr><td><a href="santorini.html">圣托里尼</a></td><td>40/8</td><td>20hrs (Athens)</td><td>May-Nov</td><td>历史，摄影</td><td>Athens</td><td>扎金索斯, 米诺克斯</td><td>邓海军</td><td>Y</td><td></td></tr>
+<tr><td><a href="santorini/santorini.html">圣托里尼</a></td><td>40/8</td><td>20hrs (Athens)</td><td>May-Nov</td><td>历史，摄影</td><td>Athens</td><td>扎金索斯, 米诺克斯</td><td>邓海军</td><td>Y</td><td></td></tr>
 <tr><td><a href="GreatBarrierReef.html">大堡礁</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>代刚</td><td>Y</td><td></td></tr>
 <tr><td><a href="seychelles.html">塞舌尔</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>丁硕</td><td>N</td><td></td></tr>
 <tr><td><a href="hawaii.html">夏威夷</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>N</td><td></td></tr>
