--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -14,7 +14,7 @@
 <p align="center">version 0.0.4</p>
 <table border="1" align="center">
 <tr><th>Islands</th><th>价格</th><th>床到床时间</th><th>适宜旅行时间</th><th>典型活动</th><th>相关景点</th><th>类似景点</th><th>去过的兄弟</th><th>签证是否</th><th>特别提示</th></tr>
-<tr><td><a href="jeju.html">济州岛</a></td><td></td><td>7hrs</td><td></td><td></td><td></td><td></td><td>贺敏</td><td>N</td><td>邮轮</td></tr>
+<tr><td><a href="jeju/jejudo.html">济州岛</a></td><td></td><td>7hrs</td><td></td><td></td><td></td><td></td><td>贺敏</td><td>N</td><td>邮轮</td></tr>
 <tr><td><a href="okinawa.html">冲绳</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
 <tr><td><a href="phuket/phuket.html">普吉岛</a></td><td>30/5</td><td>10hrs</td><td>Nov-Apr</td><td>寺庙，表演，潜水，攀牙湾</td><td>皮皮岛</td><td>巴厘岛,塞班岛</td><td>贺敏，邓海军，田锐</td><td>Y</td><td></td></tr>
 <tr><td><a href="a1/saipan.html">塞班岛</a></td><td>30/4</td><td>12hrs</td><td>Dec-Jun</td><td>潜水，水上运动</td><td></td><td>Phuket,Bali</td><td>邓海军</td><td>N</td><td></td></tr>
