--- a/hobbies/travels/overseas/islands/a1/saipan.html
+++ b/hobbies/travels/overseas/islands/a1/saipan.html
@@ -185,5 +185,6 @@
 <div class="text">
 <p>淡季不算购物应该6-8千元/人/4天，旺季一般7-9千/人/4天。吃饭、饮料和水果比国内贵。免税店一点也不便宜。</p>
 </div>
+<div class="mini_bar"><h3><a href="../index.html">返回岛屿列表</a></h3></div>
 </body>
 </html>
