--- a/hobbies/travels/overseas/islands/jeju/jejudo.html
+++ b/hobbies/travels/overseas/islands/jeju/jejudo.html
@@ -194,5 +194,6 @@
 <div class="text">
 <p>以韩餐为主，如烤肉，冷面等，一般50-200元/人/顿</p>
 </div>
+<div class="mini_bar"><h3><a href="../index.html">返回岛屿列表</a></h3></div>
 </body>
 </html>
