--- a/hobbies/travels/overseas/islands/maledive/maledive.html
+++ b/hobbies/travels/overseas/islands/maledive/maledive.html
@@ -163,5 +163,6 @@
 <div class="text">
 <p>以西餐为主，分不同的套餐，淡季一般20-40美元/人/顿</p>
 </div>
+<div class="mini_bar"><h3><a href="../index.html">返回岛屿列表</a></h3></div>
 </body>
 </html>
