--- a/hobbies/travels/overseas/islands/santorini/santorini.html
+++ b/hobbies/travels/overseas/islands/santorini/santorini.html
@@ -211,5 +211,6 @@
   <div class="desc">扎金索斯Laganas镇</div>
 </div>
 </div>
+<div class="mini_bar"><h3><a href="../index.html">返回岛屿列表</a></h3></div>
 </body>
 </html>
