--- a/hobbies/travels/overseas/islands/index.html
+++ b/hobbies/travels/overseas/islands/index.html
@@ -33,7 +33,7 @@
 <tr><td><a href="fiji.html">斐济</a></td><td></td><td></td><td></td><td></td><td></td><td>瓦努阿图</td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="tahiti.html">塔希提</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>N</td><td></td></tr>
 <tr><td><a href="iceland.html">冰岛</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Wait for you</td><td>Y</td><td></td></tr>
-<tr><td><a href="iceland.html">新西兰</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>贺敏</td><td>Y</td><td></td></tr>
+<tr><td><a href="newzealand/newzealand.html">新西兰</a></td><td></td><td></td><td></td><td></td><td></td><td></td><td>贺敏</td><td>Y</td><td></td></tr>
 </table>
 <p align="center"></p>
 <p align="center">Islands on world map</p>
