--- a/hobbies/travels/overseas/islands/phuket/phuket.html
+++ b/hobbies/travels/overseas/islands/phuket/phuket.html
@@ -10,9 +10,15 @@
 <body onload="ResetDivWidth()"; onresize="ResetDivWidth()";>
 <div class="head">普吉岛</div>
 <div class="cat_bar">点评和特别提醒</div>
-<div class="text">
+<div class="pair">
+<div class="right_wide_text">
 <p><strong>邓海军：</strong>普吉岛非常适合4-10岁小朋友出国旅游，它的海滩景色不是最佳，但交通便利，活动多样，性价比高。<strong>特别提醒：</strong>泰国人找钱时经常少找，在我们5天的行程中发生四次；去外岛浮浅的一日游，很容易晕船。</p>
 <p>推荐5-7天的行程，皮皮岛强烈推荐！</p>
+</div>
+<div class="left_small_img">
+  <img src="phuket_map.jpg" alt="Ballade" width="400" height="400">
+  <div class="desc">普吉岛地图</div>
+</div>
 </div>
 <div class="cat_bar">景点</div>
 <div class="mini_bar">海滩</div>
