--- a/hobbies/travels/overseas/islands/saipan/saipan.html
+++ b/hobbies/travels/overseas/islands/saipan/saipan.html
@@ -10,9 +10,16 @@
 <body onload="ResetDivWidth()"; onresize="ResetDivWidth()";>
 <div class="head">塞班岛</div>
 <div class="cat_bar">点评和特别提醒</div>
-<div class="text">
+<div class="pair">
+<div class="left_wide_text">
 <p><strong>邓海军：</strong>塞班岛适合6-10岁会游泳的小朋友，它的海滩人少，海水更清澈，水上活动多样，酒店餐饮选择较少，性价比中。<strong>特别提醒：</strong>晚上还是要注意安全，这是美国不是泰国。</p>
 <p>11月到次年5月是推荐时期，推荐4-6天的行程，军舰岛岛强烈推荐！</p>
+</div>
+</div>
+<div class="right_small_img">
+  <img src="saipan_amp.jpg" alt="Wait to load image" width="400" height="400">
+  <div class="desc">塞班岛地图</div>
+</div>
 </div>
 <div class="cat_bar">景点</div>
 <div class="mini_bar"><h3>海滩</h3></div>
