--- a/hobbies/travels/overseas/islands/singapore/singapore.html
+++ b/hobbies/travels/overseas/islands/singapore/singapore.html
@@ -10,8 +10,14 @@
 <body onload="ResetDivWidth()"; onresize="ResetDivWidth()";>
 <div class="head">新加坡</div>
 <div class="cat_bar">点评和特别提醒</div>
-<div class="text">
+<div class="pair">
+<div class="right_wide_text">
 <p><strong>邓海军：</strong>新加坡的各动物园和环球影城还是不错的，再看看城市风光，推荐4-5天的行程，值得一去！<strong>特别提醒：</strong>动物园尽量赶早，不然排队得一个小时。</p>
+</div>
+<div class="left_small_img">
+  <img src="singapore_map.jpg" alt="Waiting to load images" width="400" height="400">
+  <div class="desc">新加坡地图</div>
+</div>
 </div>
 <div class="cat_bar">景点</div>
 <div class="mini_bar">动植物园</div>
@@ -29,7 +35,8 @@
 <div class="pair">
 <div class="right_wide_text">
 新加坡夜间野生动物园(Night Safari)是世界首家于夜间供游客游览的野生动物园，紧邻新加坡动物园，它不同于其它夜间有照明的普通动物园，也不是那种可在世界上其它动物园见到的现代化夜间生物馆。游客可在夜间于热带丛林中观赏野生动物，从而获得独特的体验。可坐乘坐小火车游览，整个车程大约45分钟，有英语解说；也可以步行游览。每晚19:30、20:30、21:30 及周五、周六或公共节日前夜的22:30都有精彩的动物表演。
-<strong>门票：</strong>票价包含小火车，成人39新币，小孩(3-12岁)25新币。新加坡动物园和夜间动物园成人套票64新币，儿童套票41新币，包含公园缆车。</div>
+<strong>门票：</strong>票价包含小火车，成人39新币，小孩(3-12岁)25新币。新加坡动物园和夜间动物园成人套票64新币，儿童套票41新币，包含公园缆车。
+</div>
 <div class="left_small_img">
   <img src="night.jpeg" alt="Waiting to load images" width="400" height="400">
   <div class="desc">夜间动物园</div>
@@ -201,7 +208,7 @@
 乌节路是新加坡赫赫有名的购物街，街道两侧十三余家大型购物中心鳞次栉比，从奢侈品到古董艺术品、从电子产品到时尚潮牌。对于旅行者来说，在乌节路血拼几乎可以满足你的所有购物需求。就算不是纯粹的“购物狂”，在这里欣赏特色的建筑、品尝地道的美食，也是个不错的选择。现在，就跟着我们的锦囊沿着乌节路来一场购物之旅吧！</p>
 </div>
 <div class="right_small_img">
-  <img src="fatasy.jpeg" alt="Waiting to load images" width="400" height="400">
+  <img src="orchard_road.jpg" alt="Waiting to load images" width="400" height="400">
   <div class="desc">乌节路</div>
 </div>
 </div>
